v3.3.0/_sources/generated/generated/pcdsdevices.epics_motor.SmarAct.rst.txt
pcdsdevices.epics\_motor.SmarAct
================================

.. currentmodule:: pcdsdevices.epics_motor

.. autoclass:: SmarAct

   
   
    .. list-table:: Ophyd Device Components
       :header-rows: 1
       :widths: auto

       *  - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
   
       *  -  user_readback
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.RBV``
          -  
          -  hinted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  user_setpoint
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VAL``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  user_offset
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.OFF``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  user_offset_dir
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DIR``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  offset_freeze_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.FOFF``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  set_use_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.SET``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  velocity
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VELO``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  acceleration
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.ACCL``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_egu
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.EGU``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_is_moving
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.MOVN``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_done_move
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DMOV``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  high_limit_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HLS``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  low_limit_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.LLS``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  high_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HLM``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  low_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.LLM``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  direction_of_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.TDIR``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_stop
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.STOP``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  home_forward
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HOMF``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  home_reverse
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HOMR``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  disabled
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DISP``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  description
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DESC``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  dial_position
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DRBV``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  pos_type
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``:PTYPE_RBV``
          -  
          -  config
          -  
   
       *  -  open_loop
          -  :class:`~pcdsdevices.epics_motor.SmarActOpenLoop`
          -  
          -  
          -  omitted
          -  
   

   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   

   
   


    
    
    .. rubric:: Methods

    .. autosummary::
       :toctree: generated
    
       ~SmarAct.camonitor
       ~SmarAct.check_limit_switches
       ~SmarAct.configure
       ~SmarAct.describe
       ~SmarAct.disable
       ~SmarAct.enable
       ~SmarAct.end_monitor_thread
       ~SmarAct.get
       ~SmarAct.get_lim
       ~SmarAct.home
       ~SmarAct.move
       ~SmarAct.mv
       ~SmarAct.mv_ginput
       ~SmarAct.mvr
       ~SmarAct.read
       ~SmarAct.read_configuration
       ~SmarAct.set
       ~SmarAct.set_current_position
       ~SmarAct.set_lim
       ~SmarAct.stop
       ~SmarAct.summary
       ~SmarAct.trigger
       ~SmarAct.tweak
       ~SmarAct.umv
       ~SmarAct.umvr
       ~SmarAct.wait
       ~SmarAct.wm
       ~SmarAct.wm_update
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::
    
       ~SmarAct.configuration_attrs
       ~SmarAct.connected
       ~SmarAct.egu
       ~SmarAct.high_limit
       ~SmarAct.hints
       ~SmarAct.kind
       ~SmarAct.limits
       ~SmarAct.low_limit
       ~SmarAct.moving
       ~SmarAct.position
       ~SmarAct.precision
       ~SmarAct.presets
       ~SmarAct.settle_time
       ~SmarAct.timeout
       ~SmarAct.tolerated_alarm
    
    